Реализована функциональность удаления и получения информации о песни. Изменено API
