# cmd/docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/song": {
             "post": {
-                "description": "Создает новую песню на основе входных данных",
+                "description": "Создает новую песню на основе предоставленных входных данных",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,6 +17,7 @@
                     "application/json"
                 ],
                 "summary": "Создание песни",
+                "operationId": "SongCreate",
                 "parameters": [
                     {
                         "description": "Входные данные для создания песни",
@@ -30,16 +31,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ID созданной песни",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Ok"
                     },
                     "400": {
-                        "description": "Описание ошибки",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -81,11 +79,15 @@
                 }
             },
             "delete": {
-                "description": "Удаляет песню по указанным параметрам: group и name.",
+                "description": "Удаляет песню по указанному идентификатору",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Удалить песню",
+                "summary": "Удаление песни",
+                "operationId": "SongDelete",
                 "parameters": [
                     {
                         "type": "string",
@@ -100,27 +102,28 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Сообщение об успешном удалении песни",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Ok"
                     },
                     "400": {
-                        "description": "Ошибка при обработке запроса",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
         },
         "/song/info": {
             "get": {
-                "description": "Получение информации о песне по заданной группе и названию",
+                "description": "Возвращает информацию о песни на основе входных данных",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получение информации о песне",
+                "summary": "Получение информации о песни",
+                "operationId": "SongInfo",
                 "parameters": [
                     {
                         "type": "string",
@@ -135,10 +138,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/SongDetail"
-                        }
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -277,20 +283,6 @@
                     "type": "string"
                 },
                 "song": {
-                    "type": "string"
-                }
-            }
-        },
-        "SongDetail": {
-            "type": "object",
-            "properties": {
-                "link": {
-                    "type": "string"
-                },
-                "releaseDate": {
-                    "type": "string"
-                },
-                "text": {
                     "type": "string"
                 }
             }
