# internal/controller/song/song_create.go
@@ -12,16 +12,19 @@ import (
 )
 
 // @Summary Создание песни
-// @Description Создает новую песню на основе входных данных
+// @Description Создает новую песню на основе предоставленных входных данных
+// @ID SongCreate
 // @Accept json
 // @Produce json
-// @Param input body SongCreate true "Входные данные для создания песни"
-// @Success 200 {string} string "ID созданной песни"
-// @Failure 400 {object} string "Описание ошибки"
+// @Param input body SongCreateViewIn true "Входные данные для создания песни"
+// @Success 200  "Ok"
+// @Failure 400 "Bad request"
+// @Failure 500 "Internal server error"
 // @Router /song [post]
 func (controller *SongController) SongCreate(c *gin.Context) {
 	// Создание общего лога для запроса
-	generalLog := fmt.Sprintf("Запрос %s", c.Request.URL.Path)
+	generalLog := getGeneralRequestInfo(c)
+	log.Infof(generalLog)
 
 	// Получение входных данных
 	var input SongCreateViewIn
@@ -38,16 +41,18 @@ func (controller *SongController) SongCreate(c *gin.Context) {
 
 	// Отправка ответа с ID
 	c.JSON(http.StatusOK, gin.H{"message": id})
-	log.Infof("%s. Успешное добавление", generalLog)
+	log.Infof("%s. Успешное добавление песни (id %d) %s: %s", generalLog, id, input.Group, input.Name)
 }
 
 // Создание песни с помощью сервиса
 func songCreate(c *gin.Context, songView *SongCreateViewIn) (id int, err error) {
+	generalLog := getGeneralRequestInfo(c)
+
 	// Получение даты
 	releaseDate, err := time.Parse("02.01.2006", songView.ReleaseDate)
 	if err != nil {
-		errMsg := fmt.Sprintf("Неправильный формат даты (%s): %v", songView.Text, err)
-		log.Debugf("%s. %s", c.Request.URL.Path, errMsg)
+		errMsg := fmt.Sprintf("Неправильный формат даты (%s). Требуемый формат: dd.mm.yyyy", songView.Text)
+		log.Debugf("%s. %s. %v", generalLog, errMsg, err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": errMsg})
 		return 0, err
 	}
@@ -64,8 +69,8 @@ func songCreate(c *gin.Context, songView *SongCreateViewIn) (id int, err error) 
 	// Создание песни
 	id, err = service.SongService.Create(&songDto)
 	if err != nil {
-		errMsg := fmt.Sprintf("Ошибка создания песни (%s-%s): %v", songDto.Group, songDto.Name, err)
-		log.Debugf("%s. %s", c.Request.URL.Path, errMsg)
+		errMsg := fmt.Sprintf("Ошибка создания песни (%s-%s).", songDto.Group, songDto.Name)
+		log.Debugf("%s. %s. %v", generalLog, errMsg, err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": errMsg})
 		return
 	}
